--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 task run(type:JavaExec) {
     main = 'io.afero.cloudhsm.v2.Main'
     classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
 }
