Uses application plugin instead of custom run task

--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
+mainClassName = 'io.afero.cloudhsm.v2.Main'
+
+run {
+    standardInput = System.in
+}
 
 repositories {
     jcenter()
+    flatDir {
+        dir 'lib'
+    }
 }
 
 dependencies {
-    compile files('lib/cloudhsm-1.1.0')
+    compile ':cloudhsm-1.1.0'
     compile 'org.apache.logging.log4j:log4j-api:2.8.+'
     compile 'org.apache.logging.log4j:log4j-core:2.8.+'
-}
-
-task run(type:JavaExec) {
-    main = 'io.afero.cloudhsm.v2.Main'
-    classpath = sourceSets.main.runtimeClasspath
-    standardInput = System.in
 }
