--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compile ':cloudhsm-1.1.0'
+    compile ':LunaProvider'
     compile 'org.apache.logging.log4j:log4j-api:2.8.+'
     compile 'org.apache.logging.log4j:log4j-core:2.8.+'
 }
